--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,3 +37,11 @@ jobs:
     - run: |
         npm ci
         npm install -g aws-cdk
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@master
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+        aws-region: "us-east-2"  
+    - name: Deploy to AWS
+      run: cd infra && cdk deploy --require-approval=never
