--- a/lambdas/pom.xml
+++ b/lambdas/pom.xml
@@ -27,5 +27,10 @@
             <artifactId>github-api</artifactId>
             <version>1.132</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>6.1.5</version>
+        </dependency>
     </dependencies>
 </project>
